# ember

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  ui_style_guide.md
docs/: button.rst  conf.py  controller_guide.rst  custom_font_guide.rst  custom_material_guide.rst  element.rst  element_guide.rst  font.rst  font_guide.rst  index.rst  list.rst  material.rst  material_guide.rst  multiple_views_guide.rst  quick_start.rst  requirements.txt  scroll.rst  stack.rst  state_guide.rst  style.rst  style_guide.rst  text.rst  text_field.rst  transition.rst  transition_guide.rst  ui.rst  view_layer_guide.rst
ember/: __init__.py  common.py  common_styles.py  event.py  size.py
ember/font/: __init__.py  base_font.py  pixel_font.py  ttf_font.py
ember/material/: __init__.py  average_color.py  blank.py  blur.py  color.py  material.py  stretched_surface.py
ember/style/: __init__.py  button_style.py  list_style.py  load_material.py  load_style.py  scroll_style.py  slider_style.py  stack_style.py  style.py  text_field_style.py  text_style.py  toggle_style.py  view_style.py
ember/transition/: __init__.py  fade.py  icon.py  slide.py  surface_fade.py  transition.py
ember/ui/: __init__.py  box.py  button.py  element.py  h_grid.py  h_list.py  h_scroll.py  h_stack.py  icon.py  list.py  load_element.py  resizable.py  scroll.py  selectable_h_stack.py  selectable_stack.py  selectable_v_stack.py  slider.py  spacer.py  stack.py  surface.py  text.py  text_field.py  toggle.py  ui_object.py  (+4 more)
examples/: example.py  example2.py  modern.py  pixel.py
(+401 files in other folders)
